##Text encoding: utf-8

2011-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/document.cc: fixed build after glib headers change.
	* programs/spectra/document.cc: ditto.

2011-10-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cif/cif.cc: really only load the first struture from
	the file.

2011-08-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.10).

2011-08-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* mozilla-plugin/moz-plugin.c: make the plugin work with most recent
	firefox.

2011-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/document.cc: don't allow more than one dialog of each
	type for a document. Fix a crasher.

2011-07-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chem3ddoc.cc: fixed model position.

2011-07-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/cleavagesdlg.cc: initialize the fixed size check button.

2011-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystalatom.cc: don't scale fractional coordinates.
	* libs/gcu/crystaldoc.cc: fixed cell parameters loading from CIF.
	* plugins/loaders/cif/cif.cc: ditto.

2011-06-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add gsettings schemas.
	* configure.ac: ditto.
	* plugins/paint/arrows/Makefile.am: ditto.
	* plugins/paint/arrows/org.gnome.gchemutils.paint.plugins.arrows.gschema.xml.in.in: ditto.
	* schemas/Makefile.am: ditto.
	* schemas/org.gnome.gchemutils.crystal.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.paint.gschema.xml.in.in: ditto.

2011-06-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chemistry.cc: use minus instead of an hyphen when displayin numbers.
	* libs/gcu/element.cc: ditto.

2011-05-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* gchemutils.schemas.in: removed the offscreen option.