@@ -2,12 +2,12 @@
 .\"     Title: gchem3d
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: $Date: 2009-03-19 10:53:47 +0100 (jeu 19 mar 2009) $
-.\"    Manual: gchemutils
+.\"      Date: $Date: 2009-03-19 10:53:47 +0100 (jeu. 19 mars 2009) $
+.\"    Manual: gnome-chemistry-utils
 .\"    Source: gcu 0.12
 .\"  Language: English
 .\"
-.TH "GCHEM3D" "1" "$Date: 2009\-03\-19 10:53:47 +0100 (jeu 19 mar 2009) $" "gcu 0.12" "gchemutils"
+.TH "GCHEM3D" "1" "$Date: 2009\-03\-19 10:53:47 +0100 (jeu\&. 19 mars 2009) $" "gcu 0.12" "gnome-chemistry-utils"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
