@@ -1,19 +1,36 @@
+'\" t
 .\"     Title: gchemcalc
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
-.\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (Mo, 01. Sep 2008) $
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (lun. 01 sept. 2008) $
 .\"    Manual: gnome-chemistry-utils
-.\"    Source: gcu 0.10
+.\"    Source: gcu 0.12
+.\"  Language: English
 .\"
-.TH "GCHEMCALC" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (Mo, 01\&. Sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
+.TH "GCHEMCALC" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (lun\&. 01 sept\&. 2008) $" "gcu 0.12" "gnome-chemistry-utils"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -----------------------------------------------------------------
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.\" http://bugs.debian.org/507673
+.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\" -----------------------------------------------------------------
+.\" * set default formatting
+.\" -----------------------------------------------------------------
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
 .ad l
+.\" -----------------------------------------------------------------
+.\" * MAIN CONTENT STARTS HERE *
+.\" -----------------------------------------------------------------
 .SH "NAME"
 gchemcalc \- simple calculator for chemists
 .SH "SYNOPSIS"
-.HP 10
+.HP \w'\fBgchemcalc\fR\ 'u
 \fBgchemcalc\fR [\fBOPTION(S)\fR...] [\fIFORMULA\fR]
 .SH "DESCRIPTION"
 .PP
@@ -47,15 +64,16 @@ Print gchemcalc version information\&.
 .SH "AUTHORS"
 .PP
 \fBJean Br\('efort\fR <\&jean\&.brefort@normalesup\&.org\&>
-.sp -1n
-.IP "" 4
+.RS 4
 Program author\&.
+.RE
 .PP
 \fBDaniel Leidert\fR <\&daniel\&.leidert@wgdd\&.de\&>
-.sp -1n
-.IP "" 4
+.RS 4
 Manpage author\&.
+.RE
 .SH "COPYRIGHT"
+.br
 Copyright \(co 2002-2007 Jean Br\('efort
 .br
 Copyright \(co 2004-2007 Daniel Leidert
