@@ -260,7 +260,7 @@ NPError NP_GetValue (G_GNUC_UNUSED void *future, NPPVariable variable, void *val
 	return NPERR_NO_ERROR;
 }
 
-char *NP_GetMIMEDescription (void)
+char const *NP_GetMIMEDescription (void)
 {
 	return ("chemical/x-xyz:xyz:XYZ Coordinate Format;"
 			"chemical/x-mdl-molfile:mol:MDL Molfile;"
